--- a/draft/sigkddExp.tex
+++ b/draft/sigkddExp.tex
@@ -72,7 +72,7 @@
 \email{sbs7@illinois.edu}
 }
 
-\date{30 July 1999}
+\date{28 March 2021}
 \maketitle
 \begin{abstract}
     As part of CS598 Deep Learning for Healthcare course, we have decided to
@@ -237,17 +237,17 @@ noise will be used to convert PA into AP view.
     \caption{Experimental data description}
     \begin{tabular}{llrrrrr} \hline
     Source& &Total&COVID-19&Viral&Bacterial&Normal\\ \hline
-    \multirow{2}{*}{} Original data&CCX data&414&343&16&39&16\\
+    \multirow{2}{*}{} Original data&CCX data&554&478&16&42&18\\
                       &KCX data&5856&0&1493&2780&1583\\ \hline
-    \multirow{2}{*}{} View Distribution&AP view&6023&147&1501&2786&1589\\
+    \multirow{2}{*}{} View Distribution&AP view&6163&282&1501&2789&1591\\
                       &PA view&247&196&8&33&10\\ \hline
-    \multirow{3}{*}{} Training/test splits&Training&5130&391&1216&2239&1284\\
-                      &Testing&1283&88&293&583&319\\
-                      &Total&6413&479&1509&2822&1603\\ \hline
+    % \multirow{3}{*}{} Training/test splits&Training&5130&391&1216&2239&1284\\
+    %                   &Testing&1283&88&293&583&319\\
+    %                   &Total&6413&479&1509&2822&1603\\ \hline
 \end{tabular}\par
 \bigskip
 AP: anteroposterior; CCX: COVID Chest X-ray; COVID-19: coronavirus disease 2019;
-KCX: COVID Chest X-ray; PA: posteroanterior.
+KCX: Kaggle Chest X-ray; PA: posteroanterior.
 \end{table*}
 
 
