--- a/draft/sigkddExp.tex
+++ b/draft/sigkddExp.tex
@@ -52,24 +52,24 @@
 %%than three authors.
 
 \author{
-%
-% The command \alignauthor (no curly braces needed) should
-% precede each author name, affiliation/snail-mail address and
-% e-mail address. Additionally, tag each line of
-% affiliation/address with \affaddr, and tag the
-%% e-mail address with \email.
-\alignauthor Maneesh Kumar Singh\\
-\affaddr{University of Illinois at Urbana-Champaign}\\
-\email{mksingh4@illinois.edu}
-\alignauthor Raman Walwyn-Venugopal\\
-\affaddr{University of Illinois at Urbana-Champaign}\\
-\email{rsw2@illinois.edu}
-\alignauthor Satish Reddy Asi\\
-\affaddr{University of Illinois at Urbana-Champaign}\\
-\email{sasi2@illinois.edu}
-\alignauthor Srikanth Bharadwaz Samudrala\\
-\affaddr{University of Illinois at Urbana-Champaign}\\
-\email{sbs7@illinois.edu}
+    %
+    % The command \alignauthor (no curly braces needed) should
+    % precede each author name, affiliation/snail-mail address and
+    % e-mail address. Additionally, tag each line of
+    % affiliation/address with \affaddr, and tag the
+    %% e-mail address with \email.
+    \alignauthor Maneesh Kumar Singh\\
+    \affaddr{University of Illinois at Urbana-Champaign}\\
+    \email{mksingh4@illinois.edu}
+    \alignauthor Raman Walwyn-Venugopal\\
+    \affaddr{University of Illinois at Urbana-Champaign}\\
+    \email{rsw2@illinois.edu}
+    \alignauthor Satish Reddy Asi\\
+    \affaddr{University of Illinois at Urbana-Champaign}\\
+    \email{sasi2@illinois.edu}
+    \alignauthor Srikanth Bharadwaz Samudrala\\
+    \affaddr{University of Illinois at Urbana-Champaign}\\
+    \email{sbs7@illinois.edu}
 }
 
 \date{28 March 2021}
@@ -80,7 +80,7 @@
     classification using X-ray images.
 \end{abstract}
 
-\section{Introduction}
+\section{Introduction and Motivation}
 COVID-19 pandemic has ravaged the world on an unprecedented scale. It has caused
 loss of millions of lives and long lasting damages on surviving patients. X-ray
 imaging is very important part of diagnosis of COVID-19 and other pneumonia and
@@ -112,8 +112,8 @@ predictions in Stage-1. For model training, instead of cross-entropy loss, focal
 loss is extended to handle multiclass classification.
 
 \begin{align}
-    LossFunc &=FocalLoss(\hat{y},y) \\
-    &=\sum_{m=1}^{M} - \alpha_m y_m (1-\hat{y}_m)^\gamma \log{\hat{y}_m}
+    LossFunc & =FocalLoss(\hat{y},y)                                               \\
+             & =\sum_{m=1}^{M} - \alpha_m y_m (1-\hat{y}_m)^\gamma \log{\hat{y}_m}
 \end{align}
 
 \subsection{COVID-19 classification using chest CT}
@@ -140,15 +140,17 @@ cross entropy loss and surpassed speed and accuracy when compared with state of
 the art two stage detectors; Faster R CNN Variants.
 
 
-\subsection{Towards contactless patient positioning}
+\subsection{Ensemble Models}
 
-This paper \cite{9084097} discussed about patient positioning routine that
-comprised a novel robust dynamic fusion (RDF) algorithm for accurate 3D patient
-body modeling. With ‘multi-modal’ inference capability, RDF can be trained once
-and used across different applications (without re-training). They have used
-multiple CNN branches o learn the joint feature representation and a
-fully-connected parameter regressor module to estimate the 3D mesh parameters.
+FLANNEL model applies ensemble approach to combine multiple base learners to get
+classification from each model. As shown by Larse Kai Hansen and Peter Salamon
+\cite{58871}, a better classification can be achived by training an ensemble of
+neural networks on same data instead of individual models and then using a
+consensus scheme to decide the collective classification by vote.
 
+Modular ensemble models have also been shown to perform better and reduce
+training time in several researches \cite{combine}. It has been also shown to
+reduce model complexity and making the overall system easier to understand.
 
 \subsection{Deep learning COVID-19 features on CXR using limited training data sets}
 
@@ -159,7 +161,7 @@ pre-processed data that are fed into a segmentation network [FC-DenseNet] to
 extract lung areas. From this segmented lung area, classification network is
 used to classify the corresponding diseases using a patch-by-patch training and
 inferences [ResNet-18 (pre-trained) and many ResNet-18 models are used for K
-patches], final decision is made based on the majority voting from previous
+        patches], final decision is made based on the majority voting from previous
 layers. A Grad-CAM saliency map is calculated to provide an interpretable
 result. This method has an accuracy of 91.9\%, compared to that of 92.4\% for
 COVID-Net.
@@ -213,15 +215,15 @@ to use the same datasets that are used in the FLANNEL paper.
 
 \begin{enumerate}
     \item Covid Chest X-ray (CCX) dataset: This dataset contains COVID-19
-    pneumonia images as well few X-ray images from other classes. The dataset
-    can be obtained from \href{https://github.com/ieee8023/covid-chestxray-dataset}{GitHub}.
-    
-    
+          pneumonia images as well few X-ray images from other classes. The dataset
+          can be obtained from \href{https://github.com/ieee8023/covid-chestxray-dataset}{GitHub}.
+
+
     \item Kaggle Chest X-ray (KCX) dataset: This dataset contains normal,
-    bacterial pneumonia, and nov-COVID-19 viral pneumonia. The dataset can be
-    obtained from
-    \href{https://www.kaggle.com/paultimothymooney/chest-xray-pneumonia}{Kaggle}.
-    
+          bacterial pneumonia, and nov-COVID-19 viral pneumonia. The dataset can be
+          obtained from
+          \href{https://www.kaggle.com/paultimothymooney/chest-xray-pneumonia}{Kaggle}.
+
 \end{enumerate}
 
 
@@ -230,24 +232,24 @@ cases. Both dataset contains anteroposterior (AP) and posteroanterior (PA) view.
 
 As done in the research paper, we will include  both AP and PA views. Due to AP
 and PA views being different types of X-ray images, horizontal flips and random
-noise will be used to convert PA into AP view. 
+noise will be used to convert PA into AP view.
 
 \begin{table*}
     \centering
     \caption{Experimental data description}
     \begin{tabular}{llrrrrr} \hline
-    Source& &Total&COVID-19&Viral&Bacterial&Normal\\ \hline
-    \multirow{2}{*}{} Original data&CCX data&554&478&16&42&18\\
-                      &KCX data&5856&0&1493&2780&1583\\ \hline
-    \multirow{2}{*}{} View Distribution&AP view&6163&282&1501&2789&1591\\
-                      &PA view&247&196&8&33&10\\ \hline
-    % \multirow{3}{*}{} Training/test splits&Training&5130&391&1216&2239&1284\\
-    %                   &Testing&1283&88&293&583&319\\
-    %                   &Total&6413&479&1509&2822&1603\\ \hline
-\end{tabular}\par
-\bigskip
-AP: anteroposterior; CCX: COVID Chest X-ray; COVID-19: coronavirus disease 2019;
-KCX: Kaggle Chest X-ray; PA: posteroanterior.
+        Source                              &          & Total & COVID-19 & Viral & Bacterial & Normal \\ \hline
+        \multirow{2}{*}{} Original data     & CCX data & 554   & 478      & 16    & 42        & 18     \\
+                                            & KCX data & 5856  & 0        & 1493  & 2780      & 1583   \\ \hline
+        \multirow{2}{*}{} View Distribution & AP view  & 6163  & 282      & 1501  & 2789      & 1591   \\
+                                            & PA view  & 247   & 196      & 8     & 33        & 10     \\ \hline
+        % \multirow{3}{*}{} Training/test splits&Training&5130&391&1216&2239&1284\\
+        %                   &Testing&1283&88&293&583&319\\
+        %                   &Total&6413&479&1509&2822&1603\\ \hline
+    \end{tabular}\par
+    \bigskip
+    AP: anteroposterior; CCX: COVID Chest X-ray; COVID-19: coronavirus disease 2019;
+    KCX: Kaggle Chest X-ray; PA: posteroanterior.
 \end{table*}
 
 
@@ -277,7 +279,7 @@ We would use below measures to calculate the accuracy of Ensemble model for veri
     \item Precision-Recall curve
     \item ROC curve
     \item Confusion Matrix
-    \item F1 score comparison accuracy of all methods 
+    \item F1 score comparison accuracy of all methods
 \end{enumerate}
 
 
@@ -297,27 +299,27 @@ To accomplish this, the steps we will follow are
 \begin{enumerate}
     \item Extract the lung contours from the CXR images using Segment Model.
     \item Train k-patch classifiers.
-    \begin{enumerate}
-        \item Start with pre-trained model from Image Net
-        \item Divide extracted lung contours into k-patches
-        \item Run each patch through model to generate classification,
-        prediction is calculated based on majority voting
-        \item Update shared weights for each of the k models
-    \end{enumerate}
+          \begin{enumerate}
+              \item Start with pre-trained model from Image Net
+              \item Divide extracted lung contours into k-patches
+              \item Run each patch through model to generate classification,
+                    prediction is calculated based on majority voting
+              \item Update shared weights for each of the k models
+          \end{enumerate}
     \item Construct improved FLANNEL architecture by using extracted lung
-    contours as input and k-patch classifiers used as the base models.
+          contours as input and k-patch classifiers used as the base models.
     \item Train Improved FLANNEL architecture
-    \begin{enumerate}
-        \item Input is CXR image
-        \item Extract lung contours using Segment Model
-        \item Create k-patches of segmented CXR
-        \item Each k-patch classifier processes k-patches and produces predictions
-        \item Calculate weighted ensemble through neural weighting module
-        \item Compute prediction based on k-patch model predictions and weights
-        \item Compute focal loss and update neural weighting module weights
-        \item Continuously calculate metrics to measure performance such as but
-        not limited to: accuracy, precision, F1 and ROAUC.
-    \end{enumerate}
+          \begin{enumerate}
+              \item Input is CXR image
+              \item Extract lung contours using Segment Model
+              \item Create k-patches of segmented CXR
+              \item Each k-patch classifier processes k-patches and produces predictions
+              \item Calculate weighted ensemble through neural weighting module
+              \item Compute prediction based on k-patch model predictions and weights
+              \item Compute focal loss and update neural weighting module weights
+              \item Continuously calculate metrics to measure performance such as but
+                    not limited to: accuracy, precision, F1 and ROAUC.
+          \end{enumerate}
     \item Perform ensemble (combining multiple K patch classifiers) to calculate the weighted ensemble.
     \item Get the prediction and compare with the ground truth.
     \item Apply Focal Loss to train the model (improve weights).
@@ -332,22 +334,22 @@ To accomplish this, the steps we will follow are
 \section{Experimental Setup}
 
 We are planning to use \href{https://github.com/qxiaobu/FLANNEL} {FLANNEL source
-code}  as our baseline and enhance on top of it. Our codebase would be
+    code}  as our baseline and enhance on top of it. Our codebase would be
 using below software/python packages
 \begin{table}[H]
     \centering
     \caption{Software/Tools used}
     \begin{tabular}{|l|l|} \hline
-        Software/Tool&Version\\ \hline
-        Python&3.8.5\\ \hline
-        numpy &1.20.2\\ \hline
-        torch &1.8.1\\ \hline
-        torchvision &0.9.1\\ \hline
-        matplotlib &3.4.0\\ \hline
-        scikit-learn &0.24.1\\ \hline
-        pandas &1.2.3\\
+        Software/Tool & Version \\ \hline
+        Python        & 3.8.5   \\ \hline
+        numpy         & 1.20.2  \\ \hline
+        torch         & 1.8.1   \\ \hline
+        torchvision   & 0.9.1   \\ \hline
+        matplotlib    & 3.4.0   \\ \hline
+        scikit-learn  & 0.24.1  \\ \hline
+        pandas        & 1.2.3   \\
         \hline\end{tabular}
-    \end{table}
+\end{table}
 
 As FLANNEL model requires significant compute and GPU
 resources (3 NVIDIA Tesla P100 GPUs). We would be utilizing AWS EC2 service with
@@ -364,28 +366,27 @@ For data analysis and exploration, we are going to use Google Colab.
     \centering
     \caption{Project Timeline}
     \begin{tabular}{|c|c|} \hline
-        Task&Planned Due Date\\ \hline
-        Research, Planning and proposal &03/28/2021\\ \hline
-        Data Cleaning and Preprocessing & 04/02/2021\\ \hline
-        Extract the lung contours & 04/09/2021\\ \hline
-        Apply classifier on each patch & 04/09/2021\\ \hline
-        Ensemble the results from each classifier & 04/16/2021\\ \hline
-        Calculate weights & 04/23/2021 \\ \hline
-        Run the training data to get the prediction & 04/23/2021 \\ \hline
-        Apply Focal Loss & 04/23/2021 \\ \hline
-        Model Training & 04/23/2021 \\ \hline
-        Performance Evaluation & 04/23/2021 \\ \hline
-        Documentation and Video presentation & 05/07/2021 \\ \hline
-        Code and Report Submission & 05/08/2021 \\
+        Task                                        & Planned Due Date \\ \hline
+        Research, Planning and proposal             & 03/30/2021       \\ \hline
+        Data Cleaning and Preprocessing             & 04/02/2021       \\ \hline
+        Extract the lung contours                   & 04/09/2021       \\ \hline
+        Apply classifier on each patch              & 04/09/2021       \\ \hline
+        Ensemble the results from each classifier   & 04/16/2021       \\ \hline
+        Calculate weights                           & 04/23/2021       \\ \hline
+        Run the training data to get the prediction & 04/23/2021       \\ \hline
+        Apply Focal Loss                            & 04/23/2021       \\ \hline
+        Model Training                              & 04/23/2021       \\ \hline
+        Performance Evaluation                      & 04/23/2021       \\ \hline
+        Documentation and Video presentation        & 05/07/2021       \\ \hline
+        Code and Report Submission                  & 05/08/2021       \\
         \hline\end{tabular}
-    \end{table}
-    
-    %
-    % The following two commands are all you need in the
-    % initial runs of your .tex file to
-    % produce the bibliography for the citations in your paper.
-    \bibliographystyle{abbrv}
-    \bibliography{covid19}  % sigproc.bib is the name of the Bibliography in this case
-    
-    \end{document}
-    
+\end{table}
+
+%
+% The following two commands are all you need in the
+% initial runs of your .tex file to
+% produce the bibliography for the citations in your paper.
+\bibliographystyle{abbrv}
+\bibliography{covid19}  % sigproc.bib is the name of the Bibliography in this case
+
+\end{document}
