Update ensemble model

--- a/draft/sigkddExp.tex
+++ b/draft/sigkddExp.tex
@@ -144,8 +144,8 @@ the art two stage detectors; Faster R CNN Variants.
 
 FLANNEL model applies ensemble approach to combine multiple base learners to get
 classification from each model. As shown by Larse Kai Hansen and Peter Salamon
-\cite{58871}, a better classification can be achived by training an ensemble of
-neural networks on same data instead of individual models and then using a
+\cite{58871} compared to invidual model, a better classification can be achived
+by training an ensemble of neural networks on same data and then using a
 consensus scheme to decide the collective classification by vote.
 
 Modular ensemble models have also been shown to perform better and reduce
