--- a/draft/sigkddExp.tex
+++ b/draft/sigkddExp.tex
@@ -109,16 +109,18 @@ accuracy, even when trained on only 100 available COVID-19 x-ray images.
 FLANNEL model introduces two stage classification, where first stage involves
 using state of the art CNN models to classify dataset into 4 classes: COVID,
 Pneumonia virus, Pneumonia bacteria, Normal. As train dataset is very small,
-pre-trained models using ImageNet are utilized.
+pre-trained models using
+ImageNet\footnote{http://www.image-net.org/challenges/LSVRC/index} are utilized.
+Due to limited number of COVID-19 images, each model suffers from poor
+performance and high variance. In order to solve this issue, in stage-2 an
+ensemble method is proposed, where instead of traditional voting such as
+bagging\cite{combine}, a neural weight module is used is used to learn weights
+for all five predictions in Stage-1. For ensemble model training, instead of
+using cross-entropy loss, focal loss \cite{lin2018focal} is extended to handle
+multi-class classification. Focal loss function allows to down weight
+well-classified classes, so that model can focus on learning poorly classified
+classes.
 
-In stage-2, a neural weight module is used to learn weights for all five
-predictions in Stage-1. For model training, instead of cross-entropy loss, focal
-loss is extended to handle multiclass classification.
-
-\begin{align}
-    LossFunc & =FocalLoss(\hat{y},y)                                               \\
-             & =\sum_{m=1}^{M} - \alpha_m y_m (1-\hat{y}_m)^\gamma \log{\hat{y}_m}
-\end{align}
 
 \subsection{COVID-19 classification using chest CT}
 
@@ -126,7 +128,7 @@ X. Bai and Wang \cite{pmid32339081} were able to create an AI system that could
 differentiate COVID-19 and other pneumonia using a chest CT scan. They
 approached this as a classification problem and used the EfficientNet B4
 architecture which was a CNN based network. They were able to achieve results of
-96\% accuracy, 95\% sensitivity , 96\% specificity, and an area under receiver
+96\% accuracy, 95\% sensitivity, 96\% specificity, and an area under receiver
 operating characteristic curve of 0.95 and an area under the precision recall
 curve of 0.90. When compared with radiologists on the same test dataset, the AI
 system performed better. This study concluded that the AI can support
@@ -292,7 +294,9 @@ of Oh Y., and Park S., a primary improvement that we are proposing is to extract
 the lung contours from the CXR images prior to classification. The motivation
 behind this is to have the classifier focus on the specific lung regions versus
 the whole CXR image. In addition, another improvement we propose is to modify
-each base model in the ensemble to process the segmented CXR image in K patches.
+each base model in the ensemble to process the segmented CXR image in K patches
+as shown in Figure \ref{fig:improve}.
+
 
 To accomplish this, the steps we will follow are
 
@@ -328,6 +332,8 @@ To accomplish this, the steps we will follow are
 
 \begin{figure}[h]
     \includegraphics[width=8cm]{../doc/images/FLANNEL-IMPROVED.png}
+    \caption{FLANNEL Improvement}
+    \label{fig:improve}
 \end{figure}
 
 
