Found two misspelling

--- a/draft/sigkddExp.tex
+++ b/draft/sigkddExp.tex
@@ -150,7 +150,7 @@ the art two stage detectors; Faster R CNN Variants.
 
 FLANNEL model applies ensemble approach to combine multiple base learners to get
 classification from each model. As shown by Larse Kai Hansen and Peter Salamon
-\cite{58871} compared to invidual model, a better classification can be achived
+\cite{58871} compared to individual model, a better classification can be achieved
 by training an ensemble of neural networks on same data and then using a
 consensus scheme to decide the collective classification by vote.
 
@@ -162,7 +162,7 @@ reduce model complexity and making the overall system easier to understand.
 
 The authors of this paper \cite{pmid32396075}, proposed a patch-based
 convolutional neural network approach with a relatively small number of
-trainable parameters for Covid-19 diagnosis. The architecture contains first
+trainable parameters for COVID-19 diagnosis. The architecture contains first
 pre-processed data that are fed into a segmentation network [FC-DenseNet] to
 extract lung areas. From this segmented lung area, classification network is
 used to classify the corresponding diseases using a patch-by-patch training and
