Final proposal submitted

--- a/draft/Project_Proposal.tex
+++ b/draft/Project_Proposal.tex
@@ -270,7 +270,7 @@ model for COVID-19 classification.
 We would feed the predictions from base learners to FLANNEL neural weight module
 to learn base learner weights. For learning, we use the Focal loss function
 modified for multi-class classification. To compare the advantage of FLANNEL
-model on ensemble learning, We would also train FLANNEL with traditional
+model on ensemble learning, we would also train FLANNEL with traditional
 ensemble methods voting and stacking, training FLANNEL with cross-entropy loss
 replacing focal loss and training FLANNEL with re-sampling and without focal
 loss.
