--- a/draft/Project_Proposal.tex
+++ b/draft/Project_Proposal.tex
@@ -228,7 +228,7 @@ statistics are shown in Table \ref{table:datastats}.
 
 Our data preprocessing steps are same as in original paper. We will apply
 horizontal flips and random noise to convert PA view into AP view, so that model
-can be trained on same view. We will use train-test ration of 4:1 to randomly
+can be trained on same view. We will use train-test ratio of 4:1 to randomly
 generate train test split. We will apply 5 fold cross validation on training to
 get 5 models. This is done to maximize limited sample size. For Image
 preprocessing, we will resize the original input image from 256 x 256 to 224 x
